--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
+    "lib",
     "test",
     "tests"
   ],
@@ -20,6 +20,8 @@
     "angular": "~1.5.2",
     "bootstrap": "~3.3.6",
     "angular-route": "~1.5.2",
-    "angular-ui-router": "ui-route#~0.2.18"
+    "angular-ui-router": "ui-route#~0.2.18",
+    "angular-bootstrap": "~1.2.5",
+    "angular-cookies": "~1.5.3"
   }
 }
